<resources>
    <string name="app_name">Movie Collection</string>
    <string name="welcome_title">Welcome to MC</string>
    <string name="welcome_subtitle">Record every beloved movie</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="app_logo_description">Application Logo</string>


    <!-- Login Page -->
    <string name="login_title">User Login</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_go_register">Don\'t have an account? Click to Register</string>
    <string name="login_failed">Login failed, please check your email and password</string>

    <!-- Register Page -->
    <string name="register_title">Create Account</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="register_failed">Register failed, please try again</string>
    <string name="password_not_match">The two passwords entered do not match</string>

    <!-- Movie List Page -->
    <string name="movie_list_title">My Movie Collection</string>
    <string name="btn_add_movie">Add Movie</string>
    <string name="btn_logout">Logout</string>
    <string name="empty_movie_list">No movies added yet\nClick the button below to add your first movie!</string>
    <string name="movie_poster">Movie Poster</string>

    <!-- Add/Edit Movie Page -->
    <string name="add_movie">Add Movie</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="btn_back">Back</string>
    <string name="btn_save">Save</string>
    <string name="hint_movie_title">Movie Title</string>
    <string name="hint_movie_year">Release Year</string>
    <string name="hint_poster_url">Poster URL</string>
    <string name="hint_imdb_id">IMDB ID (optional)</string>
    
    <!-- Field Labels -->
    <string name="label_movie_title">Movie Title:</string>
    <string name="label_release_year">Release Year:</string>
    <string name="label_poster_url">Poster URL:</string>
    <string name="label_imdb_id">IMDB ID:</string>
    
    <!-- Hints -->
    <string name="hint_enter_movie_title">Enter movie title</string>
    <string name="hint_enter_release_year">Enter release year</string>
    <string name="hint_enter_poster_url">Enter poster image URL</string>
    <string name="hint_enter_imdb_id">Enter IMDB ID (optional)</string>
</resources>